Bug 1645549 Part 1 - Move GetFirstNonAnonBoxDescendant() to nsContainerFrame. r=dholbert

Also, rename it to GetFirstNonAnonBoxInSubtree() to reflect its
functionality more precisely that it can return the argument aFrame
itself.

Differential Revision: https://phabricator.services.mozilla.com/D81000